Fix the view title float and visiblity issues. Make the view title control the NavBar height, buttons are positioned absolute now. Fixes #619.

--- a/styles/mobile/android4.less
+++ b/styles/mobile/android4.less
@@ -33,10 +33,8 @@
     color: #fff;
     font-size: 1.5em;
     line-height: 1.5em;
-    line-height: 2.2rem;
+    line-height: 2.1rem;
     font-weight: bold;
-    float: left;
-    width: 100%;
 }
 
 .km-android .km-tabstrip .km-button
