--- a/styles/mobile/ios.less
+++ b/styles/mobile/ios.less
@@ -16,18 +16,18 @@
 .km-ios .km-dialog-title
 {
     position: relative;
-    display: block;
+    visibility: visible;
     text-align: center;
     color: #fff;
     font-size: 1.2em;
     font-size: 1.4rem;
     line-height: 1.5em;
-    line-height: 1.86rem;
+    line-height: 1.8rem;
     border: 1px solid transparent;
     font-weight: bold;
     text-shadow: 0 -1px rgba(0,0,0,.3);
-    float: left;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .km-ios .km-toolbar,
@@ -926,6 +926,7 @@
 .km-tablet .km-ios .km-view-title,
 .km-tablet .km-ios .km-modalview .km-view-title
 {
+    line-height: 1.75rem;
     color: #848B92;
     text-shadow: 0 1px rgba(255,255,255,.8);
 }
